@@ -59,6 +59,7 @@ Release 0.19.0 - Unreleased
    HBASE-969   Won't when storefile > 2G.
    HBASE-976   HADOOP 0.19.0 RC0 is broke; replace with HEAD of branch-0.19
    HBASE-977   Arcane HStoreKey comparator bug
+   HBASE-979   REST web app is not started automatically
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
